--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <h1>Bem-vindo à Minha Página HTML</h1>
     </header>
     <main>
-        <p>Esta é uma página de exemplo criada usando HTML. Aqui está uma lista de itens:</p>
+        <p>Aqui está uma lista de dois Aplicativos:</p>
         <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
+            <li>Aplicativo Calculadora</li>
+            <li>Aplicativo Jogo da Velha</li>
+            
         </ul>
     </main>
     <footer>
