--- a/index.html
+++ b/index.html
@@ -2,22 +2,46 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Minha Página HTML</title>
+    <title>Bem-vindo ao Layout Inicial</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+        .container {
+            text-align: center;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1em;
+            color: #ffffff;
+            background-color: #0073e6;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+        }
+        .button:hover {
+            background-color: #005bb5;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Bem-vindo à Minha Página HTML</h1>
-    </header>
-    <main>
-        <p>Aqui está uma lista de dois Aplicativos:</p>
-        <ul>
-            <li>Aplicativo Calculadora</li>
-            <li>Aplicativo Jogo da Velha</li>
-            
-        </ul>
-    </main>
-    <footer>
-        <p>&copy; 2025 Minha Página HTML</p>
-    </footer>
+    <div class="container">
+        <h1>Bem-vindo ao Layout Inicial</h1>
+        <a href="Layout%20Final/Programa%20Layout.html" class="button">Acessar Programa Layout</a>
+    </div>
 </body>
 </html>
