--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <div class="container">
         <h1>Bem-vindo ao Layout Inicial</h1>
-        <a href="Layout%20Final/Programa%20Layout.html" class="button">Acessar Programa Layout</a>
+        <a href="/" class="button">Acessar Programa Layout</a>
     </div>
 </body>
 </html>
